[package]
name = "dusk-relay"
version = "0.1.0"
description = "dusk relay server - tracker-style rendezvous node for peer discovery without IP exposure"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = [
    "relay",
    "rendezvous",
    "gossipsub",
    "identify",
    "ping",
    "noise",
    "yamux",
    "tcp",
    "tokio",
    "macros",
    "request-response",
    "cbor",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
urlencoding = "2"
